# NLP_Project

./: .gitignore  main.py  pyproject.toml
page1_reviews/: page1.py  work.ipynb
page2_news/: label_encoder.pkl  nlp_tg_channels.ipynb  page2.py
page3_llm/: caucasian_speech.jsonl  generate_dataset.py  page3.py  work.ipynb
page4_yoda/: generate_yoda_dataset.py  page4.py  work.ipynb  yoda_dataset.jsonl
page5_summary/: page5.py
